--- a/templates/currentprojects.html
+++ b/templates/currentprojects.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic List with Jinja</title>
-          <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Cookie&family=Dancing+Script:wght@700&family=El+Messiri:wght@400;500&family=Fruktur&family=Great+Vibes&family=Merienda:wght@700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Cookie&family=Dancing+Script:wght@700&family=El+Messiri:wght@400;500&family=Fruktur&family=Great+Vibes&family=Merienda:wght@700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='currentProjectsStyle.css') }}">
 </head>
 <body>
@@ -16,22 +15,21 @@
     <h1>Dynamic List</h1>
 </div>
 
-
-  <a href="{{ url_for('newproject') }}">
-    <button>Add Project</button>
-  </a>
-
-  {% if data_list %}
+{% if data_list %}
     <ol>
-      {% for item in data_list %}
-        <li>
-          {{ item }}
-        </li>
-      {% endfor %}
+        {% for item in data_list %}
+            <li>
+                <a href="{{ url_for('report', curr_proj=item) }}">{{ item }}</a>
+            </li>
+        {% endfor %}
     </ol>
-  {% else %}
+{% else %}
     <p>No data available.</p>
-  {% endif %}
+{% endif %}
+
+<a href="{{ url_for('newproject') }}">
+    <button>Add Project</button>
+</a>
 
 </body>
 </html>
